# ANSWERSBOT

./: .env.example  .gitignore  Makefile  New Text Document.txt  README.md  answerspot-answer-explorer.tsx  answerspot-codebase-json.json  answerspot-competitor-radar.tsx  answerspot-dashboard-home.tsx  answerspot-wired-home.txt  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.js
apps/api/src/: app.module.ts  main.ts
apps/api/src/alerts/: alerts.controller.ts  alerts.module.ts  alerts.service.ts  mailer.ts
apps/api/test/: answer-parser.spec.ts
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: alerts-panel.tsx
apps/web/lib/: api.ts  auth-client.ts
apps/workers/: pyproject.toml
apps/workers/answerspot_workers/: __init__.py  celery_app.py  config.py  db.py  schemas.py
apps/workers/answerspot_workers/adapters/: ai_overview_adapter.py  base.py  openai_adapter.py  perplexity_adapter.py  registry.py
apps/workers/answerspot_workers/recommendations/: artifacts.py  engine.py  rules.py  scoring.py  signals.py
apps/workers/answerspot_workers/tasks/: job_runner.py  parser.py  recommender.py  runner.py  scheduler.py
apps/workers/tests/: test_scoring.py
docs/: ADR-0001-auth-idp.md  DEPLOY.md  SESSION_HANDOFF_FROM_REVIEW.md
infra/docker/: api-entrypoint.sh  api.Dockerfile  web.Dockerfile  worker.Dockerfile
(+68 files in other folders)
