[project]
name = "answerspot-workers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4", "sqlalchemy>=2.0", "psycopg[binary]>=3.2",
    "pydantic>=2.7", "pydantic-settings>=2.3", "httpx>=0.27", "sentry-sdk>=2.0",
]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]
